User-checkout-functionality (#105)
* User-checkout-functionality

* fix build

--- a/.github/actions/compile-go/action.yml
+++ b/.github/actions/compile-go/action.yml
@@ -11,6 +11,6 @@ runs:
   steps:
     - run: |
         cd ${{ inputs.service-name }}
-        go build
+        go install ./... 
         go test ./...
       shell: bash
