--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -3,6 +3,13 @@ quarkus.swagger-ui.always-include=true
 quarkus.package.type=uber-jar
 quarkus.http.port=8080
 
+quarkus.grpc.clients.paymentservice.host=localhost
+quarkus.grpc.clients.paymentservice.port=8083
+
+mp.messaging.incoming.checkout.connector=smallrye-kafka
+mp.messaging.incoming.checkout.topic=checkout
+mp.messaging.incoming.checkout.value.deserializer=org.jurabek.restaurant.order.api.events.UserCheckoutDeserializer
+
 quarkus.datasource.db-kind=h2
 quarkus.datasource.jdbc.max-size=13
 quarkus.datasource.username=username-default
@@ -13,7 +20,10 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 %local.quarkus.datasource.jdbc.max-size=10
 %local.quarkus.http.root-path=/order
 %local.quarkus.http.non-application-root-path=/order
+%local.kafka.bootstrap.servers=kafka:9092
+%local.quarkus.grpc.clients.payment.host=localhost
 
 # prod
 %prod.quarkus.datasource.db-kind=postgresql
 %prod.quarkus.http.root-path=/order
+%prod.kafka.bootstrap.servers=kafka:9092
