--- a/src/backend/docker/docker-compose.yml
+++ b/src/backend/docker/docker-compose.yml
@@ -36,6 +36,16 @@ services:
       dockerfile: local.Dockerfile
     depends_on:
       - order-db
+      - payment-api
+    ports:
+      - 8082:8080
+
+  payment-api:
+    image: restaurant/payment-api
+    container_name: payment
+    build: ./services/payment-api
+    ports:
+      - 8083:8080
    
 
   # dashboard-app:
