--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -2,6 +2,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.swagger-ui.always-include=true
 quarkus.package.type=uber-jar
 quarkus.http.port=8080
+quarkus.log.console.json=true
 
 quarkus.grpc.clients.paymentservice.host=localhost
 quarkus.grpc.clients.paymentservice.port=8083
@@ -22,8 +23,10 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 %local.quarkus.http.non-application-root-path=/order
 %local.kafka.bootstrap.servers=kafka:9092
 %local.quarkus.grpc.clients.payment.host=localhost
+%local.quarkus.log.console.json=true
 
 # prod
 %prod.quarkus.datasource.db-kind=postgresql
 %prod.quarkus.http.root-path=/order
 %prod.kafka.bootstrap.servers=kafka:9092
+%prod.quarkus.log.console.json=true
