check order-api workflow

--- a/.github/workflows/order-api.yml
+++ b/.github/workflows/order-api.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - develop
     paths:
-      - 'src/backend/services/order-api/**'
-      - '.github/workflows/order-api.yml'
+      - "src/backend/services/order-api/**"
+      - ".github/workflows/order-api.yml"
   pull_request:
     branches:
-    - develop
+      - develop
     paths:
-    - 'src/backend/services/order-api/**'
-    - '.github/workflows/order-api.yml'
+      - "src/backend/services/order-api/**"
+      - ".github/workflows/order-api.yml"
 
 env:
   SERVICE_NAME: order-api
@@ -23,71 +23,71 @@ jobs:
   build:
     outputs:
       new-version: ${{ steps.version.outputs.new-version }}
-      current-version:  ${{ steps.version.outputs.current-version }}
+      current-version: ${{ steps.version.outputs.current-version }}
 
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: '0'
-      
-    - uses: graalvm/setup-graalvm@v1
-      with:
-        version: '22.3.0'
-        java-version: '17'
-        components: 'native-image'
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: "0"
 
-    - uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/order-api/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    
-    - name: "🎉 Bump Version"
-      if: github.ref == 'refs/heads/develop'
-      id: version
-      uses: ./.github/actions/bump-version
-      with:
-        service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
-        service-type: maven
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          version: "22.3.0"
+          java-version: "17"
+          components: "native-image"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: "🚀 Build & Test"
-      uses: ./.github/actions/compile-maven
-      with:
-        service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
-    
-    - name: "📦 Build graalvm native"
-      if: github.ref == 'refs/heads/develop'
-      uses: ./.github/actions/build-graalvm-native
-      with:
-        service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
-        app-version: ${{ steps.version.outputs.new-version }}
-        commit-sha: ${{ github.sha }}
+      - uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/order-api/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-    - name: "📤 Upload artifact"
-      if: github.ref == 'refs/heads/develop'
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ env.ARTIFACT_NAME }}
-        path: ./src/backend/services/${{ env.SERVICE_NAME }}/target/order-api-${{ env.VERSION }}-runner
-      env:
-        VERSION: ${{ steps.version.outputs.new-version }}
+      - name: "🎉 Bump Version"
+        if: github.ref == 'refs/heads/develop'
+        id: version
+        uses: ./.github/actions/bump-version
+        with:
+          service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
+          service-type: maven
 
-    - name: "💾 Commit bumped version"
-      if: github.ref == 'refs/heads/develop'
-      uses: ./.github/actions/git-commit
-      with:
-        git-message: Bumped ${{ env.SERVICE_NAME }} version from  ${{ steps.version.outputs.current-version }} to ${{ steps.version.outputs.new-version }}
-        directory: ./src/backend/services/${{ env.SERVICE_NAME }}
-        origin-branch: ${{ github.ref }}
-        
-    - name: "🔥 Push changes into master"
-      if: github.ref == 'refs/heads/develop'
-      uses: ./.github/actions/git-push
-      with:
-        origin-branch: ${{ github.ref }}
+      - name: "🚀 Build & Test"
+        uses: ./.github/actions/compile-maven
+        with:
+          service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
+
+      - name: "📦 Build graalvm native"
+        if: github.ref == 'refs/heads/develop'
+        uses: ./.github/actions/build-graalvm-native
+        with:
+          service-name: ./src/backend/services/${{ env.SERVICE_NAME }}
+          app-version: ${{ steps.version.outputs.new-version }}
+          commit-sha: ${{ github.sha }}
+
+      - name: "📤 Upload artifact"
+        if: github.ref == 'refs/heads/develop'
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ env.ARTIFACT_NAME }}
+          path: ./src/backend/services/${{ env.SERVICE_NAME }}/target/order-api-${{ env.VERSION }}-runner
+        env:
+          VERSION: ${{ steps.version.outputs.new-version }}
+
+      - name: "💾 Commit bumped version"
+        if: github.ref == 'refs/heads/develop'
+        uses: ./.github/actions/git-commit
+        with:
+          git-message: Bumped ${{ env.SERVICE_NAME }} version from  ${{ steps.version.outputs.current-version }} to ${{ steps.version.outputs.new-version }}
+          directory: ./src/backend/services/${{ env.SERVICE_NAME }}
+          origin-branch: ${{ github.ref }}
+
+      - name: "🔥 Push changes into master"
+        if: github.ref == 'refs/heads/develop'
+        uses: ./.github/actions/git-push
+        with:
+          origin-branch: ${{ github.ref }}
 
   analyze:
     name: analyze
@@ -97,25 +97,25 @@ jobs:
       contents: read
       security-events: write
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    
-    - uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin' # See 'Supported distributions' for available options
-        java-version: '17' # See 'Supported Java versions' for available options
-    
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: java
-    
-    - name: Build Java
-      run: |
-       bash ./src/backend/services/order-api/build.sh
-    
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - uses: actions/setup-java@v3
+        with:
+          distribution: "temurin" # See 'Supported distributions' for available options
+          java-version: "17" # See 'Supported Java versions' for available options
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: java
+
+      - name: Build Java
+        run: |
+          bash ./src/backend/services/order-api/build.sh
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
 
   # release:
   #   if: github.ref == 'refs/heads/develop'
@@ -132,13 +132,11 @@ jobs:
 
   update-manifests:
     if: github.ref == 'refs/heads/develop'
-    needs: 
+    needs:
       - release
       - build
-    uses: "./.github/workflows/deploy.yml"
+    name: "Deploy"
+    uses: ".github/workflows/deploy.yml"
     with:
       service-name: ${{ env.SERVICE_NAME }}
       version: ${{ needs.build.outputs.new-version }}
-
-
-  
