adding if condition for release and deploy

--- a/.github/workflows/order-api.yml
+++ b/.github/workflows/order-api.yml
@@ -118,6 +118,7 @@ jobs:
         uses: github/codeql-action/analyze@v2
 
   release:
+    if: github.ref == 'refs/heads/develop'
     needs:
       - build
     uses: ./.github/workflows/release.yml
@@ -130,6 +131,7 @@ jobs:
       assembly-source-file: order-api-${{ needs.build.outputs.new-version }}-runner
 
   update-manifests:
+    if: github.ref == 'refs/heads/develop'
     needs:
       - release
       - build
