--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,4 @@ src/backend/services/menu.api/menu-api-release
 src/backend/services/identity.api/identity-api-release
 src/backend/services/catalog-api/target
 src/backend/web/web.admin/dashboard/.angular
+src/backend/docker/.data
