setup-continues-delivery-for-rust (#108)
* setup-continues-delivery-for-rust

* detecting allow pull request

* setup buildx

--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -91,11 +91,11 @@ jobs:
         directory: ./src/backend/services/${{ env.SERVICE_NAME }}
         origin-branch: ${{ github.ref }}
         
-    - name: "Push changes into master"
+    - name: "Push changes"
       if: github.ref == 'refs/heads/develop'
-      uses: ./.github/actions/git-push
+      uses: ad-m/github-push-action@master
       with:
-        origin-branch: ${{ github.ref }}
+        branch: ${{ github.head_ref }}
 
   analyze:
     name: analyze
