--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -30,6 +30,16 @@ jobs:
         with:
           fetch-depth: 0                # fetch the whole repo history
 
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.18'
+      - uses: actions/checkout@v3
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
+          version: v1.29
+
   build:
     outputs:
       new-version: ${{ steps.version.outputs.new-version }}
@@ -130,6 +140,7 @@ jobs:
     needs:
       - build
       - analyze
+      - lint
     uses: ./.github/workflows/release.yml
     with:
       artifact-name: basket-api-artifact 
