--- a/.github/workflows/basket-api.yml
+++ b/.github/workflows/basket-api.yml
@@ -33,12 +33,13 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.18'
-      - uses: actions/checkout@v3
+    
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: v1.29
+          working-directory: /src/backend/services/${{ env.SERVICE_NAME }} 
 
   build:
     outputs:
